--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-	"name": "stremio-addon-jackett",
-	"version": "1.0.0",
-	"description": "Stremio Jackett Addon",
-	"scripts": {
-		"start": "node server.js"
+	"type":"module",
+	"name":"stremio-addon-jackett",
+	"version":"1.0.0",
+	"description":"Stremio Jackett Addon",
+	"scripts":
+	{
+		"start":"node server.js"
 	},
-	"dependencies": {
-		"stremio-addon-sdk": "1.1.x"
+	"dependencies":
+	{
+		"node-fetch":"^3.3.2",
+		"stremio-addon-sdk":"1.1.x",
+		"torrent2magnet-js":"^1.1.1",
+		"xml2js":"^0.6.2"
 	}
 }
