--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -6,20 +6,35 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: 🏗 Checkout code
         uses: actions/checkout@v2
 
-      - name: Build Docker image for arm64
-        run: docker buildx build --platform linux/arm64 -t user/repo:${{ github.event.release.tag_name }} .
+      - name: 🚀 Build Docker image for arm64
+        run: docker buildx build --platform linux/arm64 -t belmeg/stremio-addon-jackett:${{ github.event.release.tag_name }}-arm64 .
 
-      - name: Login to Docker Hub
+      - name: 🚀 Build Docker image for latest arm64
+        run: docker buildx build --platform linux/arm64 -t belmeg/stremio-addon-jackett:${{ github.event.release.tag_name }}-arm64 .
+
+      - name: 🚀 Build Docker image for amd64
+        run: docker buildx build --platform linux/amd64 -t belmeg/stremio-addon-jackett:latest-amd64 .
+
+      - name: 🚀 Build Docker image for latest arm64
+        run: docker buildx build --platform linux/arm64 -t belmeg/stremio-addon-jackett:latest-arm64 .
+
+      - name: 🔒 Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image for amd64
-        run: docker buildx build --platform linux/amd64 -t user/repo:${{ github.event.release.tag_name }} .
+      - name: 📩 Push arm64 Docker image to Docker Hub
+        run: docker push belmeg/stremio-addon-jackett:${{ github.event.release.tag_name }}-arm64
 
-      - name: Push Docker image to Docker Hub
-        run: docker push user/repo:${{ github.event.release.tag_name }}
+      - name: 📩 Push latest arm64 Docker image to Docker Hub
+        run: docker push belmeg/stremio-addon-jackett:latest-arm64
+
+      - name: 📩 Push amd64 Docker image to Docker Hub
+        run: docker push belmeg/stremio-addon-jackett:${{ github.event.release.tag_name }}-amd64
+
+      - name: 📩 Push latest amd64 Docker image to Docker Hub
+        run: docker push belmeg/stremio-addon-jackett:latest-amd64
