--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -9,6 +9,12 @@ jobs:
       - name: 🏗 Checkout code
         uses: actions/checkout@v2
 
+      - name: 🏗 Setup Node.js environment
+        uses: actions/setup-node@main
+        with:
+          node-version: 'lts/*'
+          cache: 'npm'
+
       - name: 🚀 Build Docker image for arm64
         run: docker buildx build --platform linux/arm64 -t belmeg/stremio-addon-jackett:${{ github.event.release.tag_name }}-arm64 .
 
