--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -18,8 +18,8 @@ jobs:
       - name: 🚀 Build Docker image for amd64
         run: docker buildx build --platform linux/amd64 -t belmeg/stremio-addon-jackett:latest-amd64 .
 
-      - name: 🚀 Build Docker image for latest arm64
-        run: docker buildx build --platform linux/arm64 -t belmeg/stremio-addon-jackett:latest-arm64 .
+      - name: 🚀 Build Docker image for latest amd64
+        run: docker buildx build --platform linux/amd64 -t belmeg/stremio-addon-jackett:${{ github.event.release.tag_name }}-arm64 .
 
       - name: 🔒 Login to Docker Hub
         uses: docker/login-action@v1
