--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -7,8 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 🏗 Checkout code
-        uses: actions/checkout@v2
-
+        uses: actions/checkout@v4
+        
+      - name: 🏗 Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        
       - name: 🏗 Setup Node.js environment
         uses: actions/setup-node@main
         with:
@@ -16,13 +19,24 @@ jobs:
           cache: 'npm'
 
       - name: 🔒 Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: 🚀 Build Docker image for amd64
-        run: docker buildx build --platform linux/amd64 -t belmeg/stremio-addon-jackett:latest-amd64 .
+      - name: 🚀 Build and push for latest tag
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: belmeg/stremio-addon-jackett:latest
 
-      - name: 📩 Push latest amd64 Docker image to Docker Hub
-        run: docker push belmeg/stremio-addon-jackett:latest-amd64
+      - name: 🚀 Build and push for version tag
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: belmeg/stremio-addon-jackett:${{ github.event.release.tag_name }}
+      
