--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,7 +1,10 @@
 name: Build and push Docker image to Docker Hub
+
 on:
   release:
     types: [created]
+  workflow_dispatch:
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -11,6 +14,9 @@ jobs:
         
       - name: 🏗 Set up QEMU
         uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
         
       - name: 🏗 Setup Node.js environment
         uses: actions/setup-node@main
