Add dynamic manifest version

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,9 @@
 {
-    "compilerOptions": {
-        "checkJs": true,
-        "module": "Node16",
-        "target": "ES6"
-    },
-    "include": ["src/**/*"]
+	"compilerOptions": {
+		"checkJs": true,
+		"module": "NodeNext",
+		"resolveJsonModule": true,
+		"target": "ES6"
+	},
+	"include": ["src/**/*"]
 }
