--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"xml2js": "^0.6.2"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.5.2"
+		"@biomejs/biome": "^1.5.2",
+		"@types/stremio-addon-sdk": "^1.6.10"
 	}
 }
