--- a/docker-compose-traefik.yml
+++ b/docker-compose-traefik.yml
@@ -15,6 +15,8 @@ services:
       - "traefik.http.routers.addon.tls=true"
       - "traefik.http.routers.addon.tls.certresolver=production"
     restart: unless-stopped
+    environment:
+      - SUBPATH=/addon
 
 networks:
   traefik_default:
