--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"start": "node src/index.js"
 	},
 	"dependencies": {
+		"@hyoretsu/utils": "^1.10.1",
 		"buffer": "^6.0.3",
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
