--- a/jackett/docker-compose.yml
+++ b/jackett/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - "traefik.enable=true"
       - "traefik.docker.network=traefik_default"
       - "traefik.http.routers.jackett.entrypoints=web,websecure"
-      - "traefik.http.routers.jackett.rule=HostHeader(`YOURADDON.COM`) && PathPrefix(`/jackett`)"
+      - "traefik.http.routers.jackett.rule=Host(`YOURADDON.COM`) && HostHeader(`YOURADDON.COM`) && PathPrefix(`/jackett`)"
       - "traefik.http.services.jackett.loadbalancer.server.port=9117"
       - "traefik.http.routers.jackett.tls=true"
       - "traefik.http.routers.jackett.tls.certresolver=production"
