--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"version": "1.1.6",
 	"description": "Stremio Jackett Addon",
 	"scripts": {
-		"start": "node src/index.js"
+		"build": "node esbuild.js",
+		"dev": "tsx watch --ignore node_modules src/index.js",
+		"start": "node dist/index.cjs"
 	},
 	"dependencies": {
 		"@hyoretsu/utils": "^1.10.1",
@@ -14,10 +16,13 @@
 		"http": "^0.0.1-security",
 		"node-fetch": "^3.3.2",
 		"parse-torrent": "^11.0.14",
+		"tsx": "^4.7.0",
 		"xml2js": "^0.6.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.5.2",
-		"@types/stremio-addon-sdk": "^1.6.10"
+		"@types/node": "^20.11.6",
+		"@types/stremio-addon-sdk": "^1.6.10",
+		"esbuild": "^0.19.12"
 	}
 }
