--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
 		"http": "^0.0.1-security",
 		"node-fetch": "^3.3.2",
 		"parse-torrent": "^11.0.14",
-		"tsx": "^4.7.0",
 		"xml2js": "^0.6.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.5.2",
 		"@types/node": "^20.11.6",
 		"@types/stremio-addon-sdk": "^1.6.10",
-		"esbuild": "^0.19.12"
+		"esbuild": "^0.19.12",
+		"tsx": "^4.7.0"
 	}
 }
