--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
 		"@hyoretsu/utils": "^1.10.1",
 		"buffer": "^6.0.3",
 		"cors": "^2.8.5",
+		"eslint": "^8.56.0",
 		"express": "^4.18.2",
 		"http": "^0.0.1-security",
 		"node-fetch": "^3.3.2",
 		"parse-torrent": "^11.0.14",
+		"prettier": "^3.2.4",
 		"xml2js": "^0.6.2"
 	},
 	"devDependencies": {
