--- a/package.json
+++ b/package.json
@@ -16,21 +16,18 @@
 		"http": "^0.0.1-security",
 		"node-fetch": "^3.3.2",
 		"parse-torrent": "^11.0.14",
-		"prettier": "^3.2.4",
 		"xml2js": "^0.6.2"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.5.2",
 		"@types/node": "^20.11.6",
 		"@types/stremio-addon-sdk": "^1.6.10",
-		"@typescript-eslint/eslint-plugin": "^6.19.1",
 		"esbuild": "^0.19.12",
 		"eslint": "^8.56.0",
-		"eslint-config-standard-with-typescript": "^43.0.1",
+		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-n": "^16.6.2",
-		"eslint-plugin-promise": "^6.1.1",
-		"tsx": "^4.7.0",
-		"typescript": "^5.3.3"
+		"eslint-plugin-import-helpers": "^1.3.1",
+		"eslint-plugin-prettier": "^5.1.3",
+		"prettier": "^3.2.4",
+		"tsx": "^4.7.0"
 	}
 }
