--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "node esbuild.js",
 		"dev": "tsx watch --ignore node_modules src/index.js",
 		"prepare": "husky",
-		"start": "node dist/index.cjs"
+		"start": "tsx watch dist/index.cjs"
 	},
 	"lint-staged": {
 		"**/*.js": [
