--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@hyoretsu/utils": "^1.10.1",
 		"buffer": "^6.0.3",
 		"cors": "^2.8.5",
+		"decompress": "^4.2.1",
 		"express": "^4.18.2",
 		"handlebars": "^4.7.8",
 		"http": "^0.0.1-security",
