--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -24,6 +24,9 @@ jobs:
           node-version: 'lts/*'
           cache: 'npm'
 
+      - name: 🏗 Build app
+        run: npm run build
+
       - name: 🔒 Login to Docker Hub
         uses: docker/login-action@v3
         with:
