--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -25,6 +25,7 @@ jobs:
           cache: 'npm'
 
       - name: 🏗 Build app
+        run: npm install
         run: npm run build
 
       - name: 🔒 Login to Docker Hub
