--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -24,8 +24,9 @@ jobs:
           node-version: 'lts/*'
           cache: 'npm'
 
-      - name: 🏗 Build app
+      - name: 🏗 Installing dependencies
         run: npm install
+      - name: 🏗 Building app
         run: npm run build
 
       - name: 🔒 Login to Docker Hub
