--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
 	"type": "module",
 	"name": "stremio-addon-jackett",
-	"version": "1.2.5",
+	"version": "1.3.0",
 	"description": "Stremio Jackett Addon",
 	"scripts": {
 		"build": "node esbuild.js",
 		"dev": "tsx watch --env-file=.env --ignore node_modules src/index.js",
 		"prepare": "husky",
-		"start": "tsx watch --env-file=.env dist/index.cjs"
+		"start": "node dist/index.cjs"
 	},
 	"lint-staged": {
 		"**/*.js": [
@@ -24,6 +24,7 @@
 		"http": "^0.0.1-security",
 		"node-fetch": "^3.3.2",
 		"parse-torrent": "^11.0.14",
+		"pm2": "^5.3.1",
 		"xml2js": "^0.6.2"
 	},
 	"devDependencies": {
