--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"type": "module",
 	"name": "stremio-addon-jackett",
-	"version": "1.3.6",
+	"version": "1.4.0",
 	"description": "Stremio Jackett Addon",
 	"scripts": {
 		"build": "node esbuild.js",
@@ -25,6 +25,7 @@
 		"http": "^0.0.1-security",
 		"parse-torrent": "^11.0.14",
 		"pm2": "^5.3.1",
+		"sqlite3": "^5.1.7",
 		"xml2js": "^0.6.2"
 	},
 	"devDependencies": {
