--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"express": "^4.18.2",
 		"handlebars": "^4.7.8",
 		"http": "^0.0.1-security",
+		"p-queue": "^8.0.1",
 		"parse-torrent": "^11.0.14",
 		"pm2": "^5.3.1",
 		"xml2js": "^0.6.2"
