Protocol fix and removed debug logs - adapted installer

--- a/.dockerignore
+++ b/.dockerignore
@@ -21,3 +21,5 @@ docker-compose.yml
 scraper
 config.json
 data/
+
+docker run -d --name=wg-easy -e LANG=de -e WG_HOST=18.201.103.247 -e PASSWORD=Aymene123 -v ~/.wg-easy:/etc/wireguard -p 51820:51820/udp -p 51821:51821/tcp --cap-add=NET_ADMIN --cap-add=SYS_MODULE --sysctl="net.ipv4.conf.all.src_valid_mark=1" --sysctl="net.ipv4.ip_forward=1" --restart unless-stopped ghcr.io/wg-easy/wg-easy
