Pushed rewrited version

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,18 +1,1 @@
-.github
-.husky
-.vscode
-jackett
-src
-node_modules
-traefik
-.eslintignore
-.eslintrc.js
-.gitignore
-.prettierrc
-.gitattributes
-docker-compose-traefik.yml
-esbuild.js
-install.sh
-jsconfig.json
-LICENSE
-README.md
+__pycache__
