--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -1,32 +1,13 @@
 global:
   checkNewVersion: true
-  sendAnonymousUsage: false  # true by default
+  sendAnonymousUsage: false
 
-# (Optional) Log information
-# ---
-# log:
-#  level: ERROR  # DEBUG, INFO, WARNING, ERROR, CRITICAL
-#   format: common  # common, json, logfmt
-#   filePath: /var/log/traefik/traefik.log
-
-# (Optional) Accesslog
-# ---
-# accesslog:
-  # format: common  # common, json, logfmt
-  # filePath: /var/log/traefik/access.log
-
-# (Optional) Enable API and Dashboard
-# ---
 api:
-  dashboard: true  # true by default
+  dashboard: true
 
-# Entry Points configuration
-# ---
 entryPoints:
   web:
     address: :80
-    # (Optional) Redirect to HTTPS
-    # ---
     http:
       redirections:
         entryPoint:
@@ -35,8 +16,6 @@ entryPoints:
   websecure:
     address: :443
 
-# Configure your CertificateResolver here...
-# ---
 certificatesResolvers:
   staging:
     acme:
@@ -54,22 +33,9 @@ certificatesResolvers:
       httpChallenge:
         entryPoint: web
 
-# (Optional) Overwrite Default Certificates
-# tls:
-#   stores:
-#     default:
-#       defaultCertificate:
-#         certFile: /etc/traefik/certs/cert.pem
-#         keyFile: /etc/traefik/certs/cert-key.pem
-# (Optional) Disable TLS version 1.0 and 1.1
-#   options:
-#     default:
-#       minVersion: VersionTLS12
-
 providers:
   docker:
-    exposedByDefault: true  # Default is true
+    exposedByDefault: true
   file:
-    # watch for dynamic configuration changes
     directory: /etc/traefik
     watch: true
