--- a/jackett/docker-compose.yml
+++ b/jackett/docker-compose.yml
@@ -18,12 +18,12 @@ services:
       - "traefik.enable=true"
       - "traefik.docker.network=traefik_default"
       - "traefik.http.routers.jackett.entrypoints=web,websecure"
-      - "traefik.http.routers.jackett.rule=Host(`YOURADDON.COM`) && HostHeader(`YOURADDON.COM`) && PathPrefix(`/jackett`)"
+      - "traefik.http.routers.jackett.rule=Host(`jackett.YOURADDON.COM`)"
       - "traefik.http.services.jackett.loadbalancer.server.port=9117"
       - "traefik.http.routers.jackett.tls=true"
       - "traefik.http.routers.jackett.tls.certresolver=production"
     restart: unless-stopped
-    
+
 
   flaresolverr:
     image: flaresolverr/flaresolverr:latest
@@ -39,7 +39,7 @@ services:
       - "traefik.http.routers.flaresolverr.tls=true"
       - "traefik.http.routers.flaresolverr.tls.certresolver=production"
     restart: unless-stopped
-    
+
 networks:
   traefik_default:
     external: true
