--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -18,16 +18,13 @@ jobs:
       - name: 🏗 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 🏗 Setup Node.js environment
-        uses: actions/setup-node@main
+      - name: 🏗 Setup Python
+        uses: actions/setup-python@v5
         with:
-          node-version: 'lts/*'
-          cache: 'npm'
+          python-version: '3.11'
 
       - name: 🏗 Installing dependencies
-        run: npm install
-      - name: 🏗 Building app
-        run: npm run build
+        run: python3 -m pip install -r requirements.txt
 
       - name: 🔒 Login to Docker Hub
         uses: docker/login-action@v3
