--- a/docker-compose-traefik.yml
+++ b/docker-compose-traefik.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   addon:
-    image: belmeg/stremio-addon-jackett:latest
+    image: belmeg/stremio-addon-jackett:testing-amd
     container_name: addon
     networks:
       - traefik_default
