--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -2,6 +2,9 @@ FROM python:3.12.2
 
 WORKDIR /app
 
+# This is to prevent Python from buffering stdout and stderr
+ENV PYTHONUNBUFFERED 1
+
 COPY requirements.txt .
 
 RUN pip install -r requirements.txt
