Remove unused files and methods Reformat files

--- a/source/.vscode/launch.json
+++ b/source/.vscode/launch.json
@@ -10,7 +10,12 @@
       "request": "launch",
       "module": "uvicorn",
       "console": "integratedTerminal",
-      "args": ["main:app", "--reload", "--port", "1337"]
+      "args": [
+        "main:app",
+        "--reload",
+        "--port",
+        "1337"
+      ]
     }
   ]
 }
