Fix docker build for version tag

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -43,7 +43,7 @@ jobs:
       - name: 🚀 Build and push for version tag
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: source/.
           platforms: linux/amd64,linux/arm64
           push: true
           tags: belmeg/stremio-addon-jackett:${{ github.event.release.tag_name }}
